// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-rbac - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Helps users find the right Azure RBAC role for an identity with least privilege access, then generate CLI commands and Bicep code to assign it. USE FOR: "what role should I assign", "least privilege role", "RBAC role for", "role to read blobs", "role for managed identity", "custom role definition", "assign role to identity". DO NOT USE FOR: creating or configuring managed identities, or general Azure security hardening; those are out of scope for this role-selection skill.",
  "extractedKeywords": [
    "access",
    "assign",
    "azure",
    "bicep",
    "blobs",
    "cli",
    "code",
    "commands",
    "configuring",
    "creating",
    "custom",
    "definition",
    "find",
    "general",
    "generate",
    "hardening",
    "helps",
    "identities",
    "identity",
    "least",
    "managed",
    "privilege",
    "rbac",
    "read",
    "right",
    "role",
    "role-selection",
    "scope",
    "security",
    "should",
    "skill",
    "then",
    "this",
    "those",
    "users",
    "what",
    "with",
  ],
  "name": "azure-rbac",
}
`;

exports[`azure-rbac - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "access",
  "assign",
  "azure",
  "bicep",
  "blobs",
  "cli",
  "code",
  "commands",
  "configuring",
  "creating",
  "custom",
  "definition",
  "find",
  "general",
  "generate",
  "hardening",
  "helps",
  "identities",
  "identity",
  "least",
  "managed",
  "privilege",
  "rbac",
  "read",
  "right",
  "role",
  "role-selection",
  "scope",
  "security",
  "should",
  "skill",
  "then",
  "this",
  "those",
  "users",
  "what",
  "with",
]
`;
